Bug 1091037 - Raise ImageBridge thread priority r=gsvelto,nical